# Wholesale-and-Retail-POS

./: .gitignore  DEVELOPMENT_LOG.md  PROJECT_PLAN.md  Project log dev A  README.md  index.html  package.json  pnpm-lock.yaml  test_all_phases.py
.ai/: DEV_A_COMPLETE_GUIDE.md
.github/workflows/: ci.yml
ai/: DEV_B_BOUNDARY.md  PROJECT_CONTEXT.md  PROJECT_LOG.md  TEST_REPORT.md
ai/dev_a/: DEV_A_STATUS_REPORT.md
ai/dev_b_boundary/: appendix.md  phase_0.md  phase_1.md  phase_2.md  phase_3.md  phase_4.md  phase_5.md  phase_6.md  phase_7.md  phase_8.md
ai/todo/: Security Audit — Wholesale & Retail POS.md  production-readiness-report.md
files/: DEV_B_COMPLETE_GUIDE.md  PROJECT_LOG.md  SCHEMA_REFERENCE.md
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auth.rs  error.rs  lib.rs  logging.rs  main.rs  secret_store.rs
src-tauri/src/commands/: backup.rs  customers.rs  inventory.rs  invoices.rs  mod.rs  printing.rs  products.rs  reports.rs  settings.rs  users.rs  zatca.rs
src-tauri/src/db/: mod.rs  schema.sql  seed_demo.sql
src/hooks/: useIdleTimer.ts  useKeyboardShortcuts.ts  useScannerStatus.ts  useToast.ts
src/lib/: csvExport.ts  tauri-commands.ts
src/pages/: CustomersPage.tsx  FirstRunSetupPage.tsx  InventoryPage.tsx  InvoicesPage.tsx  LoginPage.tsx  POSPage.tsx  ReportsPage.tsx  SettingsPage.tsx
src/store/: useAuthStore.ts  useCartStore.ts  useCustomerStore.ts  (+3 more)
wholesale-pos/: package.json  pnpm-lock.yaml
wholesale-pos/src-tauri/: Cargo.toml  tauri.conf.json
(+52 files in other folders)
