[package]
name = "pos"
version = "0.1.0"
description = "Wholesale POS System"
authors = ["Dev B"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-stronghold = "2"
tauri-plugin-shell = "2"
bcrypt = "0.15"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
quick-xml = "0.31"
ring = "0.17"
qrcode = { version = "0.14", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
escpos-rs = "0.4"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.22"
rusqlite = { version = "0.31", features = ["bundled"] }
